<resources>
    <string name="blacklist_id">用户ID</string>
    <string name="blacklist">黑名单</string>
    <string name="join_in_blacklist">加入黑名单</string>
    <string name="add_blacklist">添加屏蔽用户</string>
    <string name="blacklist_tip">该屏蔽系统会在 EHentai 网站评论系统的基础上继续屏蔽评论。\n\n评论者屏蔽项：排除该评论者上传的评论。这会使加载画廊列表花费更多时间。</string>
    <string name="blacklist_text">屏蔽用户</string>
    <string name="delete_blacklist">取消屏蔽用户“%s”？</string>
    <string name="blacklist_reason_text">屏蔽原因</string>
    <string name="settings_eh_blacklist">评论黑名单</string>
    <string name="settings_eh_blacklist_summary">根据账号名称屏蔽他人评论</string>
    <string name="settings_advanced_dns_over_http_title">安全 DNS（DoH）</string>
    <string name="settings_advanced_dns_over_http_summary">解决某些地区的 DNS 污染问题</string>
    <string name="settings_advanced_domain_fronting_title">域名前置</string>
    <string name="settings_advanced_domain_fronting_summary">绕过 SNI 封锁</string>
    <string name="settings_advanced_url_replace_title">url伪装,需关闭SNI</string>
    <string name="settings_advanced_url_replace_summary">url伪装(需重启，开启后账户功能失效)</string>
    <string name="settings_about_donate_guide">支持指南</string>
    <string name="share_favorites_dialog_title">分享收藏</string>
    <string name="share_favorites_dialog_message">分享收藏 %s ？</string>
    <string name="add_favorites_dialog_message">添加收藏 %s ？</string>
    <string name="settings_advanced_built_ex_hosts_title">内置exhentai hosts.txt</string>
    <string name="settings_advanced_built_ex_hosts_summary">应用提供的主机到IP的映射\n可被自定义 hosts.txt 覆盖</string>
    <string name="network_remind">检测到开启了vpn，请注意您的网络安全</string>
    <string name="vpn_connected_refreshed">VPN 已连接，网络连接已刷新</string>
    <string name="vpn_disconnected_refreshed">VPN 已断开，网络连接已刷新</string>
    <string name="no_blicklist">这里是黑名单</string>
    <string name="settings_download_clean_invalid_download_confirm">确定清空无效的下载项？</string>
    <string name="settings_download_cleaning">正在清理下载项</string>
    <string name="settings_download_clean_invalid_done">完成清理 %d 个下载项</string>
    <string name="settings_download_clean_invalid_no_invalid">没有需要清空的下载项</string>
    <string name="settings_download_restore_download_items_get_gallery_info">恢复在画廊中的下载项</string>
    <string name="settings_download_export_no_items">没有导出项目</string>
    <string name="settings_download_export_failed">导出下载项失败</string>
    <string name="settings_download_export_succeed">成功导出下载项到 %s</string>
    <string name="settings_download_import_items">导入下载项</string>
    <string name="settings_download_import_no_items">没有导入项目</string>
    <string name="settings_download_import_failed">导入下载项失败</string>
    <string name="settings_download_import_succeed">成功导入 %d 个下载项</string>
    <string name="settings_eh_system_theme">系统主题</string>
    <string name="app_name">EH</string>
    <string name="import_comic">Import Comic</string>
    <string name="import_comic_tip">Select comic archives (.zip/.cbz) to import into EhViewer.</string>
    <string name="select_archive">Select Archive</string>
    <string name="select_archives">Select Archives</string>
    <string name="importing_comic">Importing comic…</string>
    <string name="import_comic_success">Comic imported successfully</string>
    <string name="error_create_download_dir">Failed to create download directory</string>
    <string name="error_reading_archive">Error reading archive</string>
    <string name="error_no_images_found">No images found in archive</string>
    <string name="error_importing_comic">Error importing comic</string>
    <string name="import_mode_cbz">Import as CBZ</string>
    <string name="import_mode_images">Import as images</string>
    <string name="import_summary">%1$d succeeded, %2$d failed</string>
    <string name="import_progress_fmt">Importing: %1$d / %2$d</string>
    <string name="import_failed_header">Failed items:</string>
    <string name="site_e" translatable="false">e-hentai</string>
    <string name="site_ex" translatable="false">exhentai</string>
    <string name="theme_light">Light Theme</string>
    <string name="theme_dark">Dark Theme</string>
    <string name="theme_black">Black Theme</string>
    <string name="doujinshi" translatable="false">DOUJINSHI</string>
    <string name="manga" translatable="false">MANGA</string>
    <string name="artist_cg" translatable="false">ARTIST CG</string>
    <string name="game_cg" translatable="false">GAME CG</string>
    <string name="western" translatable="false">WESTERN</string>
    <string name="non_h" translatable="false">NON-H</string>
    <string name="image_set" translatable="false">IMAGE SET</string>
    <string name="cosplay" translatable="false">COSPLAY</string>
    <string name="asian_porn" translatable="false">ASIAN PORN</string>
    <string name="misc" translatable="false">MISC</string>
    <string name="unknown" translatable="false">UNKNOWN</string>
    <string name="homepage">Homepage</string>
    <string name="subscription">Subscription</string>
    <string name="whats_hot">What\'s hot</string>
    <string name="top_lists">Top Lists</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="stub" translatable="false">Stub</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="recaptcha">Recaptcha (Not required)</string>
    <string name="recaptcha_none">Tap here</string>
    <string name="recaptcha_loading">Loading…</string>
    <string name="recaptcha_failure">Failed</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="sign_in_via_webview">Sign in via WebView</string>
    <string name="sign_in_via_cookies">Sign in via cookies</string>
    <string name="webview_unavailable_title">System WebView unavailable</string>
    <string name="webview_unavailable_message">The system Android System WebView failed to load (it may be broken or mismatched). Try updating \"Android System WebView\" in the app store, switch the WebView implementation in Developer options, or sign in via cookies.</string>
    <string name="display_name_dialog_title">Enter Display Name</string>
    <string name="display_name">Display name</string>
    <string name="display_name_is_empty">Display name is empty</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="default_display_name">Little Hippo</string>
    <string name="cookie_explain">A cookie is a small piece of data stored in web browser. Google it if you don\'t know what it is or how to get it.\n\nPlease enter special cookies to sign in.</string>
    <string name="text_is_empty">Text is empty</string>
    <string name="waring">Warning</string>
    <string name="wrong_cookie_warning">It seems that the cookies you entered are wrong. You\'d better check them.</string>
    <string name="i_will_check_it">I will check it</string>
    <string name="i_dont_think_so">I don\'t think so</string>
    <string name="found_cookies">Found cookies!</string>
    <string name="invalid_download_location">It seems download location is not available. Please set it in Settings.</string>
    <string name="cellular_network_warning">Connected to cellular networks</string>
    <string name="clipboard_gallery_url_snack_message">There is a gallery url in the clipboard</string>
    <string name="clipboard_gallery_url_snack_action">View</string>
    <string name="image_save_success">Picture saved successfully</string>
    <string name="error_status_code_400" translatable="false">Bad Request</string>
    <string name="error_status_code_401" translatable="false">Unauthorized</string>
    <string name="error_status_code_402" translatable="false">Payment Required</string>
    <string name="error_status_code_403" translatable="false">Forbidden</string>
    <string name="error_status_code_404" translatable="false">Not Found</string>
    <string name="error_status_code_405" translatable="false">Method Not Allowed</string>
    <string name="error_status_code_406" translatable="false">Not Acceptable</string>
    <string name="error_status_code_407" translatable="false">Proxy Authentication Required</string>
    <string name="error_status_code_408" translatable="false">Request Timeout</string>
    <string name="error_status_code_409" translatable="false">Conflict</string>
    <string name="error_status_code_410" translatable="false">Gone</string>
    <string name="error_status_code_411" translatable="false">Length Required</string>
    <string name="error_status_code_412" translatable="false">Precondition Failed</string>
    <string name="error_status_code_413" translatable="false">Request Entity Too Large</string>
    <string name="error_status_code_414" translatable="false">Request-URI Too Long</string>
    <string name="error_status_code_415" translatable="false">Unsupported Media Type</string>
    <string name="error_status_code_416" translatable="false">Requested Range Not Satisfiable</string>
    <string name="error_status_code_417" translatable="false">Expectation Failed</string>
    <string name="error_status_code_500" translatable="false">Internal Server Error</string>
    <string name="error_status_code_501" translatable="false">Not Implemented</string>
    <string name="error_status_code_502" translatable="false">Bad Gateway</string>
    <string name="error_status_code_503" translatable="false">Service Unavailable</string>
    <string name="error_status_code_504" translatable="false">Gateway Timeout</string>
    <string name="error_status_code_505" translatable="false">HTTP Version Not Supported</string>
    <string name="error_bad_status_code">Bad status code: %d</string>
    <string name="error_timeout">Timeout</string>
    <string name="error_unknown_host">Unknown host</string>
    <string name="error_redirection">Too many redirections</string>
    <string name="error_socket">Network error</string>
    <string name="key_title">Title</string>
    <string name="key_title_jpn">Jpn Title</string>
    <string name="key_uploader">Uploader</string>
    <string name="key_posted">Posted</string>
    <string name="key_pages">Pages</string>
    <string name="key_rating">Rating</string>
    <string name="download_search_hint">Input search key</string>
    <string name="fuzzy_search">Fuzzy search</string>
    <string name="chinese_conversion">Chinese conversion</string>
    <string name="sort_by_relevance">Sort by relevance</string>
    <string name="search_all_labels">Search across all labels</string>
    <string name="edit_download_info_title">Edit Download Info</string>
    <string name="gallery_update_mode_back">Update back (download new pages at the end)</string>
    <string name="gallery_update_mode_front">Update front (new pages added at the beginning)</string>
    <string name="gallery_update_mode_full">Full replace (re-download everything)</string>
    <string name="gallery_update_mode_custom">Custom (specify page mapping)</string>
    <string name="gallery_update_custom_hint">Specify the page range mapping between old and new versions</string>
    <string name="gallery_update_old_pages">Old version pages:</string>
    <string name="gallery_update_new_pages">New version pages:</string>
    <string name="statistics_today">今日统计</string>
    <string name="statistics_read_count">阅读完成</string>
    <string name="statistics_download_added">添加下载</string>
    <string name="statistics_download_completed">下载完成</string>
    <string name="statistics_chart_title">最近7天</string>
    <string name="statistics_history">历史记录</string>
    <string name="statistics_no_data">暂无统计数据</string>
    <string name="statistics_today_time">今日使用时间</string>
    <string name="statistics_total_time">总时间</string>
    <string name="statistics_read_time">阅读时间</string>
    <string name="statistics_download_time">下载时间</string>
</resources>