<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.hippo.ehviewer.widget.SearchBar
        android:id="@+id/download_search_bar"
        style="@style/CardView.Normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/download_search_hint"
        android:layout_marginLeft="@dimen/gallery_search_bar_margin_h"
        android:layout_marginTop="@dimen/gallery_search_bar_margin_v"
        android:layout_marginRight="@dimen/gallery_search_bar_margin_h" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/gallery_search_bar_margin_h"
        android:layout_marginRight="@dimen/gallery_search_bar_margin_h"
        android:layout_marginBottom="@dimen/gallery_search_bar_margin_v">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fuzzy_search_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fuzzy_search"
                android:checked="false" />
            
            <CheckBox
                android:id="@+id/sort_by_relevance_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sort_by_relevance"
                android:checked="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/case_sensitive_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/case_sensitive"
                android:checked="false" />

            <CheckBox
                android:id="@+id/chinese_conversion_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chinese_conversion"
                android:checked="true" />
        </LinearLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/search_all_labels_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_all_labels"
                android:checked="false" />

        </LinearLayout>
    
    </LinearLayout>

</LinearLayout>
